[project]
    authors = [{ name = "Nate Landau", email = "github@natenate.org" }]
    dependencies = [
        "confz>=2.0.1",
        "inflect>=7.4.0",
        "loguru>=0.7.2",
        "nltk>=3.9.1,<4.0.0",
        "pydantic>=2.9.2",
        "questionary>=2.0.1",
        "rich>=13.7.1",
        "typer>=0.12.4",
]
    description = "File Manager for the Johnny Decimal System"
    license = { file = "LICENSE" }
    name = "jdfile"
    readme = "README.md"
    requires-python = ">=3.11"
    version = "1.1.5"

    [project.urls]
        Homepage   = "https://github.com/natelandau/jdfile"
        Repository = "https://github.com/natelandau/jdfile"

    [project.scripts]
        jdfile = "jdfile.jdfile:app"

[build-system]
    build-backend = "hatchling.build"
    requires      = ["hatchling"]

[tool.uv]
    dev-dependencies = [
        "commitizen>=3.29.0",
        "coverage>=7.6.1",
        "deptry>=0.21.0",
        "hypothesis>=6.118.7",
        "mypy>=1.11.1",
        "poethepoet>=0.27.0",
        "pre-commit>=3.8.0",
        "pytest-clarity>=1.0.1",
        "pytest-cov>=6.0.0",
        "pytest-env>=1.1.3",
        "pytest-mock>=3.14.0",
        "pytest-pretty-terminal>=1.1.0",
        "pytest-sugar>=1.0.0",
        "pytest-xdist>=3.6.1",
        "pytest>=8.3.2",
        "ruff>=0.6.2",
        "types-python-dateutil>=2.9.0.20241003",
        "typos>=1.24.1",
        "yamllint>=1.35.1",
    ]

[tool.commitizen]
    bump_message               = "bump(release): v$current_version → v$new_version"
    changelog_merge_prerelease = true
    tag_format                 = "v$version"
    update_changelog_on_bump   = true
    version_files              = ["src/jdfile/constants.py:VERSION"]
    version_provider           = "pep621"

[tool.coverage.report] # https://coverage.readthedocs.io/en/latest/config.html#report
    exclude_lines = [
        'def __repr__',
        'except [\w\s\._]+ as .*:',
        'log\.critical',
        'log\.debug',
        'log\.error',
        'log\.exception',
        'log\.info',
        'log\.success',
        'log\.trace',
        'log\.warning',
        'pragma: no cover',
        'raise Abort',
        'raise Exit',
        'raise typer\.Exit',
    ]
    fail_under = 60
    precision = 1
    show_missing = true
    skip_covered = true

[tool.coverage.run]
    branch       = true
    command_line = "--module pytest"
    data_file    = "reports/.coverage"
    source       = ["src"]

[tool.coverage.xml]
    output = "reports/coverage.xml"

[tool.deptry]
    known_first_party = ["jdfile"]

[tool.mypy] # https://mypy.readthedocs.io/en/latest/config_file.html
    disallow_any_unimported = false
    disallow_subclassing_any = false
    disallow_untyped_decorators = false
    disallow_untyped_defs = true
    exclude = [
        'tests/', # TOML literal string (single-quotes, regex okay, no escaping necessary)
    ]
    follow_imports = "normal"
    ignore_missing_imports = true
    junit_xml = "reports/mypy.xml"
    no_implicit_optional = true
    pretty = false
    show_column_numbers = true
    show_error_codes = true
    show_error_context = true
    strict_optional = false
    warn_redundant_casts = true
    warn_unreachable = true
    warn_unused_ignores = true

[tool.pytest.ini_options]
    addopts        = "--color=yes --doctest-modules --exitfirst --failed-first --strict-config --strict-markers --junitxml=reports/pytest.xml"
    filterwarnings = ["error", "ignore::DeprecationWarning"]
    testpaths      = ["src", "tests"]
    xfail_strict   = true

[tool.ruff] # https://github.com/charliermarsh/ruff
    exclude = [
        ".bzr",
        ".direnv",
        ".eggs",
        ".git",
        ".hg",
        ".mypy_cache",
        ".nox",
        ".pants.d",
        ".pytype",
        ".ruff_cache",
        ".svn",
        ".tox",
        ".venv",
        "__pypackages__",
        "_build",
        "buck-out",
        "build",
        "dist",
        "node_modules",
        "venv",
    ]

    fix            = true
    line-length    = 100
    output-format  = "grouped"
    src            = ["src", "tests"]
    target-version = "py310"

    [tool.ruff.lint]
        ignore = [
            "B006",    # mutable-argument-default
            "B008",    # function-call-in-default-argument
            "COM812",  # Trailing comma missing"
            "CPY001",  # Missing copyright notice at top of file
            "D107",    # undocumented-public-init
            "D213",    # multi-line-summary-second-line
            "D215",    # section-underline-not-over-indented
            "D406",    # new-line-after-section-name
            "D407",    # dashed-underline-after-section
            "D408",    # section-underline-after-name
            "D409",    # section-underline-matches-section-length
            "D413",    # blank-line-after-last-section
            "E501",    # line-too-long
            "FBT001",  # Boolean default positional argument in function definition
            "FBT002",  # Boolean default positional argument in function definition
            "FIX002",  # Line contains TODO
            "ISC001",  # single-line-implicit-string-concatenation
            "N805",    # invalid-first-argument-name-for-method
            "PLR0913", # too-many-arguments
            "PLR0917", # too many positional arguments
            "RSE102",  # Unnecessary parentheses on raised exception"
            "S311",    # suspicious-non-cryptographic-random-usage
            "TD002",   # Missing author in todo
            "TD003",   # Missing ticket number in todo
            "UP007",   # non-pep604-annotation
        ]
        per-file-ignores = { "jdfile.py" = [
            "PLR0912",
            "PLR0913",
        ], "tests/*.py" = [
            "A002",
            "A003",
            "ANN001",
            "ANN003",
            "ANN201",
            "ANN202",
            "ARG001",
            "ARG002",
            "ARG005",
            "D102",
            "DOC201",
            "ERA001",
            "F403",
            "PGH003",
            "PLR0913",
            "PLR0917",
            "PLR2004",
            "PLR6301",
            "S101",
        ] }
        preview = true
        select = ["ALL"]
        unfixable = ["E712", "ERA001", "F401", "F841", "UP007"]
        [tool.ruff.lint.mccabe]
            # Unlike Flake8, default to a complexity level of 10.
            max-complexity = 10

        [tool.ruff.lint.pydocstyle]
            convention = "google"

        [tool.ruff.lint.pylint]
            max-args = 6

[tool.ruff.format]
    indent-style              = "space"
    line-ending               = "auto"
    quote-style               = "double"
    skip-magic-trailing-comma = false

[tool.poe.tasks]
    [tool.poe.tasks.upgrade]
        shell = """
        echo "-- Upgrading packages --" &&
        uv lock --upgrade &&
        echo "-- Autoupdating pre-commit --" &&
        pre-commit autoupdate
        """

    [tool.poe.tasks.lint]
        help = "Lint this package"

        [[tool.poe.tasks.lint.sequence]]
            shell = "ruff check --preview --no-fix src/"

        [[tool.poe.tasks.lint.sequence]]
            shell = "ruff format --check src/ tests/"

        [[tool.poe.tasks.lint.sequence]]
            shell = "mypy --config-file pyproject.toml src/"

        [[tool.poe.tasks.lint.sequence]]
            shell = "typos"

        [[tool.poe.tasks.lint.sequence]]
            cmd = """
                pre-commit run
                    --all-files
                    --color always
                """

[tool.poe.tasks.test]
    cmd  = "pytest --cov --cov-config=pyproject.toml --cov-report=xml --cov-report=term tests/"
    help = "Test this package and generate coverage reports"
